<resources>
    <string name="app_name">The Game</string>
    <string name="input_button">Add</string>
    <string name="clear_button">Clear Clues</string>
    <string name="start_game_button">Finished Adding</string>
    <string name="correct_button">Correct</string>
    <string name="pass_button">Pass</string>
    <string name="main_game">Game</string>
    <string name="switch_to_team1">Switch to Team One</string>
    <string name="switch_to_team2">Switch to Team Two</string>
    <string name="team1">Team One</string>
    <string name="team2">Team Two</string>
    <string name="scorecard">Scorecard</string>
    <string name="calculate_scores">Calculate Scores</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="start_round">Start Round</string>
    <string name="round_finished">Round finished!!</string>
    <string name="rules">"Welcome to The Game \n"
    "The object of The Game is to guess the most names described by your team members"\n\n
        "Split the group into two teams." \n\n
        "Each player should enter at least four names into the game.  These can be any names from famous people to family members as long as they are known to the whole group."\n\n
        "When ready, choose one member of the team to describe the names (no rhyming or ‘sounds like’ allowed)."\n\n
        "Start Game is then pressed and the timer begins."\n\n
        "Guessing by the remaining team members should begin."\n\n
        "If the team cannot guess the name, the ‘Pass’ button can be pressed.  "\n\n
        "If correctly guessed, press ‘Correct’ and a new name will be presented.  "\n\n
        "Once the timer is up, pass to Team Two and repeat.  "\n\n
        "The game is complete when all of the names have been correctly guessed."\n\n
        "The Scorecard will present the scores for each team at the end of the game.  "\n\n</string>
    <string name="enter">Enter</string>
    <string name="play_again">Play Again</string>

</resources>
