<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.thegame.GameActivityTeam1"
    android:background="@drawable/chalkboard"
    >

    <Button
        android:id="@+id/start_round"
        android:layout_width="101dp"
        android:layout_height="58dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_custom"
        android:fontFamily="casual"
        android:onClick="onStartRoundButtonClicked"
        android:text="@string/start_round"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/stop"
        app:layout_constraintRight_toLeftOf="@+id/stop"
        app:layout_constraintTop_toTopOf="@+id/stop"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/stop"
        android:layout_width="64dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="-1dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_custom"
        android:fontFamily="casual"
        android:onClick="onStopButtonClicked"
        android:text="@string/stop"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="1dp"
        android:fontFamily="casual"
        android:textAlignment="textEnd"
        android:textColor="@android:color/background_light"
        android:textSize="54dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scorecard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_custom"
        android:fontFamily="casual"
        android:onClick="onScorecardButtonClicked"
        android:text="@string/scorecard"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/switch_to_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="-1dp"
        android:background="@drawable/button_custom"
        android:fontFamily="casual"
        android:onClick="onSwitchToTeamOneButton"
        android:text="@string/switch_to_team1"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/clue_output"
        android:layout_width="365dp"
        android:layout_height="77dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="54dp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/pass_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_custom"
        android:fontFamily="casual"
        android:onClick="onPassButtonClicked"
        android:text="@string/pass_button"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clue_output"
        app:layout_constraintVertical_bias="0.26999998" />

    <Button
        android:id="@+id/correct_button"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_custom"
        android:fontFamily="casual"
        android:onClick="onCorrectButtonClicked"
        android:text="@string/correct_button"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pass_button"
        app:layout_constraintLeft_toRightOf="@+id/pass_button"
        app:layout_constraintTop_toTopOf="@+id/pass_button"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
