<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.thegame.ScorecardActivity"
    android:background="@drawable/chalkboard"
    >

    <EditText
        android:id="@+id/score_title_1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:allowUndo="false"
        android:contextClickable="false"
        android:cursorVisible="false"
        android:defaultFocusHighlightEnabled="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:focusedByDefault="false"
        android:inputType="none"
        android:keyboardNavigationCluster="false"
        android:linksClickable="false"
        android:longClickable="false"
        android:selectAllOnFocus="false"
        android:text="@string/team1"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <EditText
        android:id="@+id/score_title_2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:allowUndo="false"
        android:contextClickable="false"
        android:cursorVisible="false"
        android:defaultFocusHighlightEnabled="false"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:keyboardNavigationCluster="false"
        android:text="@string/team2"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textIsSelectable="false"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/score_title_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintTop_toTopOf="@+id/score_title_1"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/score_title_1"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/team_1_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.3" />

    <TextView
        android:id="@+id/team_2_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toRightOf="@+id/team_1_scores"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <Button
        android:id="@+id/calculate_scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showScoresButtonClicked"
        android:text="@string/calculate_scores"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.482"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.468" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRestartButtonClicked"
        android:text="@string/play_again"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="3dp" />
</android.support.constraint.ConstraintLayout>
